force-app/main/default/objects/Corporation__c/Corporation__c.object-meta.xml
<CustomObject>
    <description>Corporation of Shops</description>
    <label>Corporation</label>
    <nameField>
        <label>Corporation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>