force-app/main/default/objects/Corporation__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <summarizedField>Shop__c.Annual_Revenue__c</summarizedField>
    <summaryForeignKey>Shop__c.Corporation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>