force-app/main/default/objects/Corporation__c/fields/Employees_number__c.field-meta.xml
<CustomField>
    <fullName>Employees_number__c</fullName>
    <description>Employees number</description>
    <label>Employees number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>