force-app/main/default/objects/Corporation__c/fields/Enterprise_size__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_size__c</fullName>
    <description>Enterprise size</description>
    <label>Enterprise size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large business</fullName>
                <default>true</default>
                <label>Large business</label>
            </value>
            <value>
                <fullName>Microenterprise</fullName>
            </value>
            <value>
                <fullName>Small business</fullName>
            </value>
            <value>
                <fullName>Medium business</fullName>
            </value>
            <value>
                <fullName>Extra large business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>